# FFmpegPlay

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/as/: CMakeLists.txt
app/libs/include/libavutil/: frame.h
app/src/androidTest/java/com/xy/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/xy/ffmpeg/: MainActivity.java
app/src/main/java/com/xy/ffmpeg/utils/: FFmpegUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xy/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
